--- a/05-02-2026/Javascript/JavaScript Events/index.html
+++ b/05-02-2026/Javascript/JavaScript Events/index.html
@@ -12,50 +12,54 @@
 <body>
     <div class="container">
         <form id="form">
-                <div class="header">
-                    <h2>ToDo</h2>
-                </div>
-                <div class="form-control">
-                    <label for="name">Name:</label>
-                    <input type="text" id="name" name="name" placeholder="Enter Name">
-                </div>
-                <div class="form-control">
-                    <label for="age">Age:</label>
-                    <input type="number" id="age" name="age" placeholder="Enter age">
-                </div>
-                <div class="form-control">
-                    <label for="gender">
-                        <input type="radio" id="male" name="gender" value="Male">
-                        Male
-                    </label>
-                    <label for="gender">
-                        <input type="radio" id="female" name="gender" value="Female">
-                        Female
-                    </label>
-                </div>
-                <div class="form-control">
-                    <label for="Language">Known Language:</label>
-                    <select name="Language" id="lang">
-                        <option disabled>select Language</option>
-                        <option value="Tamil">Tamil</option>
-                        <option value="English">English</option>
-                        <option value="Hindi">Hindi</option>
-                    </select>
-                </div>
+            <div class="header">
+                <h2>ToDo</h2>
+            </div>
+            <div class="form-control">
+                <label for="name">Name:</label>
+                <input type="text" id="name" name="name" placeholder="Enter Name">
+            </div>
+            <div class="form-control">
+                <label for="age">Age:</label>
+                <input type="number" id="age" name="age" placeholder="Enter age">
+            </div>
+            <div class="form-control">
+                <label for="gender">
+                    <input type="radio" id="male" name="gender" value="Male">
+                    Male
+                </label>
+                <label for="gender">
+                    <input type="radio" id="female" name="gender" value="Female">
+                    Female
+                </label>
+            </div>
+            <div class="form-control">
+                <label for="Language">Known Language:</label>
+                <select name="Language" id="lang">
+                    <option disabled>select Language</option>
+                    <option value="Tamil">Tamil</option>
+                    <option value="English">English</option>
+                    <option value="Hindi">Hindi</option>
+                </select>
+            </div>
             <button>Submit</button>
         </form>
     </div>
     <div>
-        <table>
+        <table border="1" id="dataTable">
             <thead>
-                <th>Name:</th>
-                <th>Age</th>
-                <th>Gender</th>
-                <th>Language</th>
+                <tr>
+                    <th>Name</th>
+                    <th>Age</th>
+                    <th>Gender</th>
+                    <th>Language</th>
+                </tr>
             </thead>
-            <tr></tr>
+            <tbody>
+            </tbody>
         </table>
     </div>
+
 </body>
 
 </html>
