Assignment task Bug fix

--- a/Assignment/Practical/StudentList.html
+++ b/Assignment/Practical/StudentList.html
@@ -9,7 +9,7 @@
     <h2>Student Names</h2>
     <div id="container"></div>
     <script>
-        let students = ["Arun", "Divya", "Karthik", "Meena", "Rahul"];
+        let students = ["Arun", "Keerthivasan", "Karthik", "Varun", "Rahul"];
         let ul = document.createElement("ul");
         for (let i = 0; i < students.length; i++) {
             let li = document.createElement("li");
