--- a/Assignment/Practical/CountPositive.html
+++ b/Assignment/Practical/CountPositive.html
@@ -4,13 +4,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Numbers Greater Than 10</title>
+    <title>CountPositive</title>
 </head>
-
 <body>
-
     <p id="countResult"></p>
-
     <script>
         let numbers = [10, -5, 3, -8, 0, 7, -2];
         let positive = 0;
