--- a/Assignment/Practical/DropDown.html
+++ b/Assignment/Practical/DropDown.html
@@ -8,7 +8,7 @@
 <body>
 
     <select id="countrySelect">
-        <option value="">Select Country</option>
+        <option disabled>Select Country</option>
         <option>India</option>
         <option>USA</option>
         <option>Canada</option>
